# approx-MVBB

./: .gitignore  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Grid.cpp  LICENSE  PointsBox.cpp  ProjectionPlane.cpp  README.md  main.cpp
